Have sine animation on page, still spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,11 @@ div {
   text-align: center;
 }
 
+.firstSineWave {
+  grid-column: 1/ span 3;
+  grid-row: 2 / span 2;
+}
+
 .fade {
   opacity: 1;
 }
